# opentelemetry-cpp

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .clomonitor.yml  .cmake-format.py  .copyright-ignore  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .iwyu.imp  .markdownlint.json  .markdownlint.yml  .markdownlintignore  .readthedocs.yaml  .sentryclirc  BUILD  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODE-REVIEW-PR2518.txt  CONTRIBUTING.md  DEPRECATED.md  Dependencies.cmake  INSTALL.md  MODULE.bazel  README.md  RELEASING.md  Versioning.md  WORKSPACE  WORKSPACE.bzlmod  all_api_includes.cc  all_sdk_includes.cc  asanwin_help.txt  codecov.yml  dll.md  dll_deps.bzl  dll_deps.cpp  (+24 more)
api/: BUILD  CHANGELOG.md  CMakeLists.txt  moz.build
api/abi_check/: ABI_CHECK_LIST  abi_check_baggage-v1.0.0.dump  abi_check_baggage.cc  abi_check_trace-v1.0.0.dump  abi_check_trace.cc  check-abi.sh
api/docs/: Doxyfile  Overview.md  conf.py  index.rst
api/test/: CMakeLists.txt
docker/thrift/: CMakeLists.txt  Dockerfile
examples/: CMakeLists.txt  README.md  WORKSPACE  moz.build  unsampled_spans_demo.cc
examples/ETWTracer/: .gitignore  ETWProvider.hpp  ETWTracer.hpp  ETWTracer.sln  ETWTracer.vcxproj  ETWTracer.vcxproj.filters  README.md  main.cpp  utils.hpp
examples/TraceStreamer/: .cproject  CMakeLists.txt  ETWStringStream.hpp  EventProtocols.hpp  StreamTracer.hpp  TraceStreamer.vcxproj  TraceStreamer.vcxproj.filters  main.cpp
examples/async/: BUILD  CMakeLists.txt  README.md  main.cc
examples/batch/: BUILD  CMakeLists.txt  main.cc
examples/common/: CMakeLists.txt
examples/configuration/: BUILD  CMakeLists.txt  custom_log_record_exporter.cc  custom_log_record_exporter.h  custom_log_record_exporter_builder.cc  custom_log_record_exporter_builder.h  custom_log_record_processor.cc  custom_log_record_processor.h  custom_log_record_processor_builder.cc  custom_log_record_processor_builder.h  custom_pull_metric_exporter.cc  custom_pull_metric_exporter.h  custom_pull_metric_exporter_builder.cc  custom_pull_metric_exporter_builder.h  custom_push_metric_exporter.cc  custom_push_metric_exporter.h  custom_push_metric_exporter_builder.cc  custom_push_metric_exporter_builder.h  custom_sampler.cc  custom_sampler.h  custom_sampler_builder.cc  custom_sampler_builder.h  custom_span_exporter.cc  custom_span_exporter.h  custom_span_exporter_builder.cc  custom_span_exporter_builder.h  custom_span_processor.cc  custom_span_processor.h  custom_span_processor_builder.cc  custom_span_processor_builder.h  extensions.yaml  main.cc
examples/custom_http_client/: CMakeLists.txt  custom_http_client.cc  custom_http_client.h  main.cc
examples/e2e/: .bazelrc  BUILD  WORKSPACE
examples/environment_carrier/: CMakeLists.txt  main.cc
examples/etw_threads/: BUILD  CMakeLists.txt  README.md  main.cc
examples/event/: .clang-format  .cproject  .project  CMakeLists.txt  ConsoleTracer.hpp  ETWStringStream.hpp  EventProtocols.hpp  EventSender.vcxproj  EventSender.vcxproj.filters  Span.cpp  StreamTracer.hpp  TODO.md  build-gcc-mac.sh  build.sh  install-gcc-mac.sh  main.cpp  mklink.sh  utils.hpp
examples/explicit_parent/: BUILD  CMakeLists.txt  README.md  main.cc
examples/grpc/: BUILD  CMakeLists.txt  README.md  client.cc  client.cpp  greeter_server.cc  server.cc  server.cpp  tracer_common.h
examples/helloworld/: BUILD  helloworld.cc
examples/http/: BUILD  CMakeLists.txt  README.md  client.cc  server.cc  server.h  server.hpp  tracer_common.h  tracer_common.hpp
examples/jaeger/: BUILD  CMakeLists.txt  README.md  main.cc
examples/logger_configurator/: CMakeLists.txt  README.md  main.cc
examples/logs_simple/: BUILD  CMakeLists.txt  README.md  main.cc
examples/manual_propagation/: BUILD  CMakeLists.txt  README.md  main.cc
examples/metrics_simple/: BUILD  CMakeLists.txt  README.md  main.cc  metrics_ostream.cc
examples/multi_processor/: BUILD  CMakeLists.txt  README.md  main.cc
examples/multithreaded/: BUILD  CMakeLists.txt  main.cc  moz.build
examples/nostd/: CMakeLists.txt  README.md  main.cpp  nostd_usage.vcxproj
examples/otlp/: BUILD  CMakeLists.txt  README.md  file_log_main.cc  file_main.cc  file_metric_main.cc  grpc_log_main.cc  grpc_main.cc  grpc_metric_main.cc  http_instrumented_main.cc  http_log_main.cc  http_main.cc  http_metric_main.cc  hw.cc  main.cc
examples/otlp_log_exporter/: BUILD  http_log_main.cc
examples/plugin/: BUILD  CMakeLists.txt  main.cc
examples/prometheus/: BUILD  CMakeLists.txt  README.md  main.cc  prometheus.yml  run.sh
examples/prometheus_exporter/: BUILD  CMakeLists.txt  README.md  main.cc
examples/simple/: BUILD  CMakeLists.txt  README.md  library.cc  main.cc  main_factory.cc  stdout_exporter.h
examples/simple-sampler/: README.md  main.cc
examples/simple_sampler/: BUILD  CMakeLists.txt  README.md  main.cc  stdout_exporter.cc  stdout_exporter.h
examples/tracer_configurator/: CMakeLists.txt  README.md  main.cc
examples/w3c_tracecontext_test/: BUILD  CMakeLists.txt  README.md  main.cc
examples/yaml/: CMakeLists.txt  anchors.yaml  custom_log_record_exporter_builder.cc  custom_log_record_exporter_builder.h  custom_log_record_processor.h  custom_log_record_processor_builder.cc  custom_sampler.cc  (+23 more)
exporters/: CMakeLists.txt  moz.build
ext/: BUILD  CMakeLists.txt
opentracing-shim/: BUILD  CMakeLists.txt  README.md
resource_detectors/: BUILD  CMakeLists.txt  container.cc  container_detector.cc  container_detector_utils.cc  env_entity_detector.cc  process_detector.cc  process_detector_utils.cc
sdk/: BUILD  CHANGELOG.md  CMakeLists.txt  b.ps1  moz.build
test_common/: BUILD  CMakeLists.txt
x/: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  README.md  config.yaml  get_grafana_sources.cmd  grafana-dashboard-jvm-metrics.json  grafana-dashboard-red-metrics-classic.json  grafana-dashboard-red-metrics-native.json  grafana-dashboards.yaml  grafana-datasources.yaml  grafana_sources.json  loki.yaml  m.cpp  otel.yaml  otel_sdk_build.cmd  p.cpp  prom.yaml  proxy.cpp  proxy.h  t.cpp  tempo.yaml  x.cpp  xcdebug.sh  y.cpp
(+4479 files in other folders)
